ver 1.0 html 뼈대

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <link href="style.css" rel="stylesheet">
         <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet"/>
+        <script src="script.js"></script>
     </head>
     <body>
         <div id="top">
@@ -15,22 +16,25 @@
         </div>
         </div>
         <div id="profile">
+        <div id="profile_pic">
+            <img class="circle_pic" src="image/profile.jpg"/>
+        </div>
             <div>
             <img class="circle_pic" img src="image/profile.jpg" width="50px"/>
             </div>
         <div id="prrofile_info">   
         <div id="id">
-            junyong_um <i class="fas fa-cog"></i>
+            <span>junyong_um</span> 
+            <i class="fas fa-cog"></i>
         </div>
         <button>프로필 편집</button>
         </div>
         </div>
         <div>
         <p>
-            <strong>
-                준용</strong><br/>
+            <strong id="userInfo">준용</strong><br/>
         </p>
-        <p>
+        <p id="profilrDetail">
             <a href="https://woodesk.github.io">
             woodesk.github.io
             </a>
